# Distributed_Training_Framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: project_documentation.md  theoretical_deep_dive.md
src/: main.py  pipeline.py
