[project]
name = "distributed-training-framework"
version = "0.1.0"
description = "A toy implementation of a distributed training framework for large models."
authors = [{name = "Meillaya"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
]

[project.urls]
"Homepage" = "https://github.com/example/distributed-training-framework"
"Bug Tracker" = "https://github.com/example/distributed-training-framework/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/rocm6.2"]
prerelease = "allow" 